--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Jason Sherrick",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mariadb": "^3.2.1",
