--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The World's Best Campsite Rating App",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "seed": "node seed.js"
   },
   "keywords": [
     "nodejs",
