--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mariadb": "^3.2.1",
-    "sequelize": "^6.33.0"
+    "mongoose": "^7.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
