--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
-    "mongoose": "^7.6.2"
+    "mongoose": "^7.6.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
