--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
   "author": "Jason Sherrick",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^10.4.16",
-    "concat": "^1.0.3",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.6.2",
-    "morgan": "^1.10.0",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^10.1.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "sass": "^1.69.4"
+    "sass": "^1.69.4",
+    "autoprefixer": "^10.4.16",
+    "concat": "^1.0.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^10.1.0"
   }
 }
