--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The World's Best Campsite Rating App",
   "main": "app.js",
   "scripts": {
-    "watch-css": "sass sass/main.scss assets/css/style.css",
+    "watch-css": "sass sass/main.scss assets/css/style.css -w",
     "nodemon": "nodemon",
     "start": "npm-run-all --parallel nodemon watch-css"
   },
