--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch-css": "sass sass/main.scss assets/css/style.css -w",
     "nodemon": "nodemon",
-    "start": "npm-run-all --parallel nodemon watch-css"
+    "start": "npm-run-all --parallel nodemon watch-css",
+    "seed": "node seed-data/seed.js"
   },
   "keywords": [
     "nodejs",
